Create API billing service and integrate it with OpenFeign

--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -7,4 +7,5 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-management.endpoints.web.exposure.include=health,info,metrics,beans
+management.endpoints.web.exposure.include=*
+eureka.client.enabled=true
