--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -5,14 +5,18 @@ spring:
         webflux:
           routes:
             - id: customer-service
-              uri : http://localhost:8085
+              uri : lb://CUSTOMER-SERVICE
               predicates:
                 - Path=/customers/**
             - id : inventory-service
-              uri : http://localhost:8086
+              uri : lb://INVENTORY-SERVICE
               predicates:
                 - Path=/products/**
+            - id: billing-service
+              uri: lb://BILLING-SERVICE
+              predicates:
+                - Path=/bills/**
     discovery:
-      enabled: false
+      enabled: true
     config:
       enabled: false
