--- a/customer-service/src/main/resources/application.properties
+++ b/customer-service/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+management.endpoints.web.exposure.include=*
 
-management.endpoints.web.exposure.include=health,info,metrics,beans
+eureka.client.enabled=true
