--- a/customer-service/src/main/resources/application.properties
+++ b/customer-service/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.show-sql=true
 management.endpoints.web.exposure.include=*
 
 eureka.client.enabled=true
+spring.cloud.config.enabled=true
+
+spring.config.import=optional:configserver:http://config-service:9999
