--- a/billing-service/src/main/resources/application.properties
+++ b/billing-service/src/main/resources/application.properties
@@ -14,5 +14,7 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.cloud.config.enabled=false
+spring.cloud.config.enabled=true
 spring.cloud.discovery.enabled=true
+
+spring.config.import=optional:configserver:http://config-service:9999
