--- a/billing-service/src/main/resources/application.yaml
+++ b/billing-service/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
-eureka:
-  client:
-    service-url:
-      defaultZone: http://discovery-service:8761/eureka/
-    register-with-eureka: true
-    fetch-registry: true
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://discovery-service:8761/eureka/
+#    register-with-eureka: true
+#    fetch-registry: true
