--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -5,4 +5,4 @@ server.port=9999
 # Config Server Git Repository
 spring.cloud.config.server.git.uri=https://github.com/ANZER03/microservices-inventory-config-repo
 eureka.client.enabled=true
-eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+eureka.client.service-url.defaultZone=http://discovery-service:8761/eureka/
